fix: scroll prompt on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -160,4 +160,8 @@
   ol {
     @apply list-decimal;
   }
+
+  section {
+    @apply mt-8;
+  }
 }
